--- a/Libs/ios-SDNestedTable/SDNestedTable/SDGroupCell.xib
+++ b/Libs/ios-SDNestedTable/SDNestedTable/SDGroupCell.xib
@@ -50,13 +50,8 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{320, 1}</string>
 										<reference key="NSSuperview" ref="505943474"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="372076284"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
-										<object class="NSColor" key="IBUIBackgroundColor">
-											<int key="NSColorSpace">1</int>
-											<bytes key="NSRGB">MC41MTA4MjQzNzY0IDAuNjQ5Nzk0MzQ4NSAxAA</bytes>
-										</object>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 									<object class="IBUILabel" id="372076284">
@@ -64,7 +59,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{26, 9}, {92, 26}}</string>
 										<reference key="NSSuperview" ref="505943474"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="175079623"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -93,7 +87,6 @@
 								</array>
 								<string key="NSFrameSize">{320, 40}</string>
 								<reference key="NSSuperview" ref="849007509"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="994418418"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -107,7 +100,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 40}, {320, 200}}</string>
 								<reference key="NSSuperview" ref="849007509"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -131,7 +123,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 239}</string>
 						<reference key="NSSuperview" ref="244650526"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="505943474"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -147,7 +138,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 240}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="849007509"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -165,14 +155,6 @@
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">backgroundView</string>
-						<reference key="source" ref="244650526"/>
-						<reference key="destination" ref="505943474"/>
-					</object>
-					<int key="connectionID">24</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">subTable</string>
 						<reference key="source" ref="244650526"/>
 						<reference key="destination" ref="175079623"/>
@@ -186,6 +168,14 @@
 						<reference key="destination" ref="372076284"/>
 					</object>
 					<int key="connectionID">59</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">backgroundView</string>
+						<reference key="source" ref="244650526"/>
+						<reference key="destination" ref="505943474"/>
+					</object>
+					<int key="connectionID">61</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -274,47 +264,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">59</int>
+			<int key="maxID">61</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">SDGroupCell</string>
-					<string key="superclassName">SDSelectableCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="headView">UIView</string>
-						<string key="subTable">UITableView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="headView">
-							<string key="name">headView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="subTable">
-							<string key="name">subTable</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SDGroupCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SDSelectableCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SDSelectableCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
